# db-learning

./: .env.template  compose.yml  config.py  database_api.py  main.py  pyproject.toml  queries.py  requirements.txt  requirenments.txt
